# agent-trading-desk

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  HOOKS.md  LICENSE  README.md  desk_state.example.json  install_gate_hook.py  journal-template.md  pyproject.toml  settings.template.json
.claude/commands/: desk.md  intel.md  options-hunter.md
.github/workflows/: ci.yml
dashboard/: README.md  build_dashboard.py  data.example.json  index.html
hooks/: pretrade_gate.py
tests/: test_blackscholes.py  test_dashboard.py  test_edgar.py  test_execution.py  test_liquidity.py  test_options_math.py  test_performance.py  test_preflight.py  test_recon.py  test_risk.py  test_sizing.py  test_volatility.py
tradingdesk/: __init__.py  blackscholes.py  edgar.py  execution.py  liquidity.py  options_math.py  performance.py  preflight.py  recon.py  risk.py  sizing.py  volatility.py
