[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingdesk"
version = "0.1.0"
description = "Deterministic, tested quantitative core for an LLM-orchestrated options trading desk"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["options", "trading", "black-scholes", "edgar", "insider", "llm-agent"]
dependencies = []  # stdlib only — no numpy/pandas, runs anywhere

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["tradingdesk*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
